--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
 services:
-  profile:
-    build: ./profile
+#  profile:
+#    build: ./profile
+#    ports:
+#      - "8080:8080"
+#  favorite-color:
+#    build: ./favorite-color
+#    ports:
+#      - "8081:8081"
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: hackday
     ports:
-      - "8080:8080"
-  favorite-color:
-    build: ./favorite-color
-    ports:
-      - "8081:8081"
+      - "5433:5432"
+    volumes:
+      - ./local/postgres/data:/var/lib/postgres/data
+      - ./local/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -d hackday"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
